--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         <activity android:name=".Login"></activity>
         <activity android:name=".Profile" />
         <activity
-            android:name=".Landing"
-            android:windowSoftInputMode="adjustNothing">
+            android:name=".Landing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
