--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,14 +54,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:23.0.0'
     implementation 'com.google.firebase:firebase-firestore:23.0.0'
     implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
-    implementation 'de.hdodenhof:circleimageview:3.0.0'
 
 }
