--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Smartcolab">
+        android:theme="@style/Theme.Smartcolab"
+        android:screenOrientation="portrait">
         <activity android:name=".Signup"></activity>
         <activity android:name=".Login" />
         <activity android:name=".Profile" />
