--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.Smartcolab"
-        android:screenOrientation="portrait">
-        <activity android:name=".Signup"></activity>
-        <activity android:name=".Login" />
-        <activity android:name=".Profile" />
-        <activity android:name=".Landing">
+        android:screenOrientation="nosensor">
+        <activity android:screenOrientation="portrait" android:name=".Signup"></activity>
+        <activity android:screenOrientation="portrait" android:name=".Login" />
+        <activity android:screenOrientation="portrait" android:name=".Profile" />
+        <activity android:screenOrientation="portrait" android:name=".Landing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
