--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="eu.lukatjee.smartcolab">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,10 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Smartcolab"
         android:screenOrientation="nosensor">
-        <activity android:screenOrientation="portrait" android:name=".Signup"></activity>
-        <activity android:screenOrientation="portrait" android:name=".Login" />
-        <activity android:screenOrientation="portrait" android:name=".Profile" />
-        <activity android:screenOrientation="portrait" android:name=".Landing">
+        <activity
+            android:screenOrientation="portrait" android:name=".Signup"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:screenOrientation="portrait" android:name=".Login"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:screenOrientation="portrait" android:name=".Profile"
+            tools:ignore="LockedOrientationActivity" />
+        <activity android:screenOrientation="portrait" android:name=".Landing"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
