--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,25 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
+        android:screenOrientation="nosensor"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Smartcolab"
-        android:screenOrientation="nosensor">
+        android:theme="@style/Theme.Smartcolab">
+        <activity android:name=".Chats"></activity>
         <activity
-            android:screenOrientation="portrait" android:name=".Signup"
+            android:name=".Signup"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
-        <activity android:screenOrientation="portrait" android:name=".Login"
+        <activity
+            android:name=".Login"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
-        <activity android:screenOrientation="portrait" android:name=".Profile"
+        <activity
+            android:name=".Profile"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
-        <activity android:screenOrientation="portrait" android:name=".Landing"
+        <activity
+            android:name=".Landing"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
